[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maths-tools"
version = "0.1.0"
description = "A collection of mathematical tools."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Arpit Soni" }
]
requires-python = ">=3.9"

dependencies = []
