[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-to-maths"
version = "0.0.2"
description = "A simple Python package providing basic arithmetic operations."
readme = "readme.md"
requires-python = ">=3.9"
authors = [
    { name = "Arpit Soni", email = "harshit998ops@gmail.com" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Arpitsoni89/maths-tools"
Issues = "https://github.com/Arpitsoni89/maths-tools/issues"
