[metadata]
name = easy_to_math
version = 0.2.0
description = Mathematics tools and utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Arpit Soni
license = MIT
license_files = LICENSE
url = https://github.com/Arpitsoni89/maths-tools
project_urls =
    Homepage = https://github.com/Arpitsoni89/maths-tools
    Source = https://github.com/Arpitsoni89/maths-tools
    Tracker = https://github.com/Arpitsoni89/maths-tools/issues

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    maths-tools*
exclude =
    tests*
    docs*

[bdist_wheel]
universal = 0
